Able to use a generic Load similar to flux